fixes in mongodb for orders